image alignment fixes

--- a/css/article.css
+++ b/css/article.css
@@ -21,7 +21,7 @@ article > div.header p {
     text-wrap: balance;
 }
 article > div.header .header-image {
-    max-width: 40rem;
+    max-width: 60rem;
     margin: 0 auto;
 }
 
@@ -78,7 +78,7 @@ article p {
 }
 
 article figure {
-    max-width: 40rem;
+    max-width: 42rem;
     width: 100%;
     height: auto;
     margin: 0 auto 8rem auto;
